# neotoma_database_functions

./: .gitignore  .tbls.yml  README.md  check_functions.py  database_descriptors.py  install_tbls.sh  linting_output.txt  pyproject.toml  run_diagnostics.sh  schema.yaml
ap/: README.md
cron/: schedule.sql  schedule_in_database.sql
da/: datasetbyid.sql
doi/: datasetinfo.sql
ndb/: compute_cnratio.sql  datasetsummary.sql  update_recdatemodified.sql
templates/: index.md.tmpl  table.md.tmpl  viewpoint.md.tmpl
ti/: getagetypeid.sql  getalldatasetpis.sql  getanalysisunitsamplecount.sql  getchroncontroltypestable.sql  getchronocontrolsbychronologyid.sql  getchronologiesbycollunitid.sql  getcollectiontypestable.sql  getdatasettypesbytaxagroupid.sql  getelementtypebyname.sql  getgeochronanalysisunit.sql  getgeochronbydatasetid.sql  getgeochronidcount.sql  getgeopoliticalunitstable.sql  getgeopolunitbyrank.sql  getisovariablescaletypes.sql  getminpubidbypubidtype.sql  getnextlowergeopolcountbynames.sql  getprocedureinputparams.sql  getpublicationbycitation.sql  getrelativeagechroncontroltype.sql  getrocktypestable.sql  getsampleidfordatasetidfromgeochronanalunit.sql  getsampleparents.sql  getsites.sql  getsitesbydatabaseanddatasettype.sql  getspecimendatebyspecimendateid.sql  getspecimendomesticstatusbyname.sql  getspecimensexbyname.sql  gettaphonomicsystembydatasettype.sql  gettaphonomicsystembyname.sql  getunitsdatasettypecount.sql  getvariableelementbyname.sql  getvariableunitsid.sql
ts/: deletedata.sql  deletedataprocessor.sql  deleterepositoryspecimen.sql  (+18 more)
(+1167 files in other folders)
